package com.lldprep.systems.splitwise.model.enums;

public enum SplitType {
    EQUAL,
    EXACT,
    PERCENTAGE
}
